mobile layout bug fixes, fail

--- a/front-end/src/styles/style.scss
+++ b/front-end/src/styles/style.scss
@@ -383,7 +383,7 @@ button[type="submit"] {
     .algorithm-block {
         display: block;
         margin-bottom: 3rem;
-        padding-top: 10rem;
+        padding-top: 5rem;
     }
 
     .algorithm__writing {
